--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 spring.security.user.name=code
 spring.security.user.password=123
 server.port=8080
+
+spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
+
+#flight.service.version = in-memory
+flight.service.version = database
+
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.format_sql=true
+
+spring.liquibase.enabled=true
